# cpp_advanced_course

./: .gitignore  CMakeLists.txt  README.md
week1/hw1/: CMakeLists.txt  main.cpp
week1/hw1/grading/: ASSIGNMENT_RUBRIC.txt
week1/hw1/review/: review4.md  student2.cpp  student3.cpp  student4.cpp
week1/hw1/review/original_c_prompt/: c_prompt.c
week3/: homework2_instructions.md  readme.md
week3/chatgpt/: ebike_2wd_use_case_efficiency.md  project_management.md
week3/docs/: homework2_instructions.md  results.md
week3/lib/appstate/src/: appstate.h  appstate.tpp
week3/lib/debug/src/: debug.h
week3/lib/graph/src/: graph.cpp  graph.h
week3/lib/integration/src/: integration.cpp  integration.h
week3/lib/monteCarloSim/src/: monteCarloSim.cpp  monteCarloSim.h
week3/lib/runtime_parameters/src/: runtime_parameters.cpp  runtime_parameters.h
week3/src/: common.h  debug.cpp  graph.cpp  graph.h  main.cpp  main.h
week3/test/: test_main.cpp
week3/tests/: main_test.cpp  main_test.h  test_graph.cpp  test_main.cpp  test_montecarlo_sim.cpp
week4/: readme.md
week5/: readme.md
